<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/czech_republic_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/prague" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/first_question"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_question_hint"
            android:inputType="textCapWords"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:text="@string/second_question"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/glass_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/second_question_option_one" />

        <CheckBox
            android:id="@+id/steel_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/second_question_option_two" />

        <CheckBox
            android:id="@+id/porcelain_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/second_question_option_three" />

        <CheckBox
            android:id="@+id/carpets_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/second_question_option_four" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/jaromir_jagr" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/third_question"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/hamrlik_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="24dp"
                android:text="@string/third_question_option_one" />

            <RadioButton
                android:id="@+id/jagr_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_question_option_two" />
        </RadioGroup>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/drinks" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/fourth_question"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/wine_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="24dp"
                android:text="@string/fourth_question_option_one" />

            <RadioButton
                android:id="@+id/beer_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth_question_option_two" />
        </RadioGroup>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/milan_kundera" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/fifth_question"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/lifeIs_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/fifth_question_option_one" />

        <CheckBox
            android:id="@+id/theUnbearable_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/fifth_question_option_two" />

        <CheckBox
            android:id="@+id/theUltimate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/fifth_question_option_three" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:onClick="displayScore"
            android:text="@string/get_results" />

    </LinearLayout>
</ScrollView>